objects/SpringCMEos__Environment__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Spring CM Environments</description>
    <fields>
        <fullName>SpringCMEos__Env_Prefix__c</fullName>
        <description>Environment prefix</description>
        <label>Environment Prefix</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__Environment_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Environment selected is the SpringCM environment that you are using</description>
        <label>Environment Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__SpringCM_Account_ID__c</fullName>
        <label>SpringCM Account ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__SpringCM_REST_URL__c</fullName>
        <label>SpringCM REST URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Environment</label>
</CustomObject>